# fastapi-react-typescript-template

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  README.md  asset-manifest.json  autoformat.sh  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
backend/: main.py
backend/routes/: chat.py  hello_world.py  todolist.py
dockerfiles/backend/: Dockerfile
dockerfiles/frontend/: Dockerfile
frontend/: .dockerignore  .eslintrc.js  .prettierrc.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Card.test.ts  Card.tsx  ChatMessage.tsx  ContextConsumer.tsx  ContextProvider.ts  FunctionalComponentTemplate.tsx  MyRouter.tsx  TodoItem.test.ts  TodoItem.tsx  TodoPage.tsx
frontend/src/functions/: fetch_helper.ts
frontend/src/pages/: About.tsx  Chat.tsx  Home.tsx  NormalChat.tsx  Todo.tsx  TodoPage.tsx
src/: App.tsx  data.json
src/components/: Card.tsx  ContextConsumer.tsx  ContextProvider.ts  TodoPage.tsx
static/css/: main.94d8d91e.chunk.css  main.94d8d91e.chunk.css.map
static/js/: 2.1662d5ac.chunk.js  2.1662d5ac.chunk.js.map  main.ad337369.chunk.js  main.ad337369.chunk.js.map  runtime-main.83b8cda3.js  runtime-main.83b8cda3.js.map
test/: test_e2e.py  test_integration.py  test_stuff.py  tester_helper.py
test_integration/: test_e2e.py  test_integration.py  tester_helper.py
